出力可能言語を日本語に限定

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     </p>
     <p>
         <select id="language">
-            <option value="en">English</option>
+            <!--<option value="en">English</option>-->
             <option value="jp" selected>Japanese</option>
         </select>
     </p>
